Update Quality Control Workflow for Quotes.ipynb

--- a/examples/use-cases/workflows/Quality Control Workflow for Quotes.ipynb
+++ b/examples/use-cases/workflows/Quality Control Workflow for Quotes.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "ea58d87a",
    "metadata": {},
    "outputs": [],
@@ -66,10 +66,10 @@
     ")\n",
     "\n",
     "# Get URL and use it to configure Workflow and Drive SDKs\n",
-    "api_url = api_factory.api_client.configuration._base_path.replace(\"api\",\"\")\n",
+    "api_url = api_factory.api_client.configuration.host.strip(\"/api\")\n",
     "\n",
-    "wf_configuration = lusid_workflow.Configuration(host=api_url + \"workflow\")\n",
-    "drive_configuration = lusid_drive.Configuration(host=api_url + \"drive\")\n",
+    "wf_configuration = lusid_workflow.Configuration(host=api_url + \"/workflow\")\n",
+    "drive_configuration = lusid_drive.Configuration(host=api_url + \"/drive\")\n",
     "wf_configuration.access_token = api_factory.api_client.configuration.access_token\n",
     "drive_configuration.access_token = api_factory.api_client.configuration.access_token\n",
     "\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "df743857",
    "metadata": {},
    "outputs": [],
@@ -112,19 +112,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "a778ded2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Folder '/example-quotes' already exists in Drive.\n",
-      "File '/example-quotes/exampledata.xlsx' already exists in Drive.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Attempt to create the folder in LUSID Drive\n",
     "try:\n",
@@ -171,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "47597aab",
    "metadata": {},
    "outputs": [
@@ -257,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "983c0f24",
    "metadata": {},
    "outputs": [
@@ -461,7 +452,7 @@
        "[747 rows x 9 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "09962ea3",
    "metadata": {},
    "outputs": [
@@ -568,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "db7e3675",
    "metadata": {},
    "outputs": [
@@ -637,7 +628,7 @@
        "1   Mid  Unreasonably Large Value  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "a227551e",
    "metadata": {
     "scrolled": true
@@ -758,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "8c137b89",
    "metadata": {},
    "outputs": [
@@ -841,34 +832,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2022-01-23</td>\n",
-       "      <td>notebook-example-dq-workflow</td>\n",
-       "      <td>EQ56JD720MDJ</td>\n",
-       "      <td>Pay Pal Holdings Inc</td>\n",
-       "      <td>94.0</td>\n",
-       "      <td>105.0</td>\n",
-       "      <td>121.5</td>\n",
-       "      <td>77.5</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>Mid</td>\n",
-       "      <td>IQR Outlier</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2022-02-20</td>\n",
-       "      <td>notebook-example-dq-workflow</td>\n",
-       "      <td>EQ56JD720MDJ</td>\n",
-       "      <td>Pay Pal Holdings Inc</td>\n",
-       "      <td>94.0</td>\n",
-       "      <td>105.0</td>\n",
-       "      <td>121.5</td>\n",
-       "      <td>77.5</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>Mid</td>\n",
-       "      <td>IQR Outlier</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
        "      <td>2022-01-08</td>\n",
        "      <td>notebook-example-dq-workflow</td>\n",
        "      <td>EQ56JD720LSU</td>\n",
@@ -882,7 +845,7 @@
        "      <td>IQR Outlier</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>4</th>\n",
        "      <td>2022-02-20</td>\n",
        "      <td>notebook-example-dq-workflow</td>\n",
        "      <td>EQ56JD720LSU</td>\n",
@@ -896,7 +859,7 @@
        "      <td>IQR Outlier</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>5</th>\n",
        "      <td>2022-02-21</td>\n",
        "      <td>notebook-example-dq-workflow</td>\n",
        "      <td>EQ56JD720LSU</td>\n",
@@ -910,7 +873,7 @@
        "      <td>IQR Outlier</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>6</th>\n",
        "      <td>2022-07-25</td>\n",
        "      <td>notebook-example-dq-workflow</td>\n",
        "      <td>EQ56JD720LSU</td>\n",
@@ -923,6 +886,34 @@
        "      <td>Mid</td>\n",
        "      <td>IQR Outlier</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2022-01-23</td>\n",
+       "      <td>notebook-example-dq-workflow</td>\n",
+       "      <td>EQ56JD720MDJ</td>\n",
+       "      <td>Pay Pal Holdings Inc</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>105.0</td>\n",
+       "      <td>121.5</td>\n",
+       "      <td>77.5</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>Mid</td>\n",
+       "      <td>IQR Outlier</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2022-02-20</td>\n",
+       "      <td>notebook-example-dq-workflow</td>\n",
+       "      <td>EQ56JD720MDJ</td>\n",
+       "      <td>Pay Pal Holdings Inc</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>105.0</td>\n",
+       "      <td>121.5</td>\n",
+       "      <td>77.5</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>Mid</td>\n",
+       "      <td>IQR Outlier</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -932,23 +923,23 @@
        "0 2022-04-14  notebook-example-dq-workflow   EQ56JD720345   \n",
        "1 2022-04-21  notebook-example-dq-workflow   EQ56JD720345   \n",
        "2 2022-05-26  notebook-example-dq-workflow   EQ56JD720345   \n",
-       "3 2022-01-23  notebook-example-dq-workflow   EQ56JD720MDJ   \n",
-       "4 2022-02-20  notebook-example-dq-workflow   EQ56JD720MDJ   \n",
-       "5 2022-01-08  notebook-example-dq-workflow   EQ56JD720LSU   \n",
-       "6 2022-02-20  notebook-example-dq-workflow   EQ56JD720LSU   \n",
-       "7 2022-02-21  notebook-example-dq-workflow   EQ56JD720LSU   \n",
-       "8 2022-07-25  notebook-example-dq-workflow   EQ56JD720LSU   \n",
+       "3 2022-01-08  notebook-example-dq-workflow   EQ56JD720LSU   \n",
+       "4 2022-02-20  notebook-example-dq-workflow   EQ56JD720LSU   \n",
+       "5 2022-02-21  notebook-example-dq-workflow   EQ56JD720LSU   \n",
+       "6 2022-07-25  notebook-example-dq-workflow   EQ56JD720LSU   \n",
+       "7 2022-01-23  notebook-example-dq-workflow   EQ56JD720MDJ   \n",
+       "8 2022-02-20  notebook-example-dq-workflow   EQ56JD720MDJ   \n",
        "\n",
        "            DisplayName     q1     q3  UpperLimit  LowerLimit   Price Field  \\\n",
        "0              Visa Inc   61.0   89.0       131.0        19.0     5.0   Mid   \n",
        "1              Visa Inc   61.0   89.0       131.0        19.0     1.0   Mid   \n",
        "2              Visa Inc   61.0   89.0       131.0        19.0   509.0   Mid   \n",
-       "3  Pay Pal Holdings Inc   94.0  105.0       121.5        77.5   150.0   Mid   \n",
-       "4  Pay Pal Holdings Inc   94.0  105.0       121.5        77.5    40.0   Mid   \n",
-       "5             Tesco Plc  280.0  362.0       485.0       157.0    98.0   Mid   \n",
-       "6             Tesco Plc  280.0  362.0       485.0       157.0   900.0   Mid   \n",
-       "7             Tesco Plc  280.0  362.0       485.0       157.0   800.0   Mid   \n",
-       "8             Tesco Plc  280.0  362.0       485.0       157.0  1005.0   Mid   \n",
+       "3             Tesco Plc  280.0  362.0       485.0       157.0    98.0   Mid   \n",
+       "4             Tesco Plc  280.0  362.0       485.0       157.0   900.0   Mid   \n",
+       "5             Tesco Plc  280.0  362.0       485.0       157.0   800.0   Mid   \n",
+       "6             Tesco Plc  280.0  362.0       485.0       157.0  1005.0   Mid   \n",
+       "7  Pay Pal Holdings Inc   94.0  105.0       121.5        77.5   150.0   Mid   \n",
+       "8  Pay Pal Holdings Inc   94.0  105.0       121.5        77.5    40.0   Mid   \n",
        "\n",
        "        Result  \n",
        "0  IQR Outlier  \n",
@@ -962,7 +953,7 @@
        "8  IQR Outlier  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -991,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "b03b44e3-9b40-4fd8-94d0-e533ffb811f9",
    "metadata": {},
    "outputs": [
@@ -1048,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "c4e5a59f",
    "metadata": {},
    "outputs": [],
@@ -1085,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "95303935",
    "metadata": {},
    "outputs": [],
@@ -1142,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "260e0962",
    "metadata": {
     "scrolled": true
@@ -1288,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "fb66764a",
    "metadata": {
     "scrolled": true
@@ -1414,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "90d059f1",
    "metadata": {
     "scrolled": true
@@ -1546,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "8342a1d4",
    "metadata": {
     "scrolled": true
@@ -1686,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "b0aecb84",
    "metadata": {},
    "outputs": [
@@ -1738,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "id": "993c40c9",
    "metadata": {},
    "outputs": [
